네이버 따라하기6

--- a/index.html
+++ b/index.html
@@ -593,9 +593,9 @@
 						<div class="rolling-news">
 							<a href="#" class="news">카드사용 늘리면 100만원 소득공제 추가…"내년 3.2% 성장"</a>
 							<a href="#" class="news">화이자 백신, 미국서도 알레르기 반응…한 병원서 2명째</a>
-							<a href="#" class="news">a</a>
-							<a href="#" class="news">b</a>
-							<a href="#" class="news">c</a>
+							<a href="#" class="news">美FDA 자문위, 모더나백신 사용권고…두번째 백신접종 '초읽기'</a>
+							<a href="#" class="news">[팩트체크] 검찰총장 징계 집행, 대통령 재량은 없다?</a>
+							<a href="#" class="news">경찰, 박원순 휴대폰 포렌식 재개…사망 경위 규명 주력</a>
 						</div>
 					</div>
 					<div class="right-box">
@@ -1211,7 +1211,14 @@
 					<div class="timesquare-card">
 						<div class="timesquare-wrap">
 							<div class="timesquare-rolling">
-								<a href="#" class="card">aaaaa</a>
+								<a href="#" class="card stock">
+									<span class="stock-title">증시</span>
+									<div class="stock-box">
+										<span class="name">코스닥</span>
+										<span class="current">946.39</span>
+										<span class="rate rate-up">2.35 +0.25%</span>
+									</div>
+								</a>
 								<a href="#" class="card">bbbbb</a>
 								<a href="#" class="card">ccccc</a>
 								<a href="#" class="card">ddddd</a>
